# UFG

./: 01.c  l  ls
AD1 (algoritmos e estruturas de dados)/Programação_generica/: Datastructs.c  Datastructs.h  ls  main.c  makefile  po
AD1 (algoritmos e estruturas de dados)/TAD/: esfera(1).c
AD1 (algoritmos e estruturas de dados)/algortimos_de_ordenação/: listaordernada  mergesort.c  quicksort.c
AD1 (algoritmos e estruturas de dados)/ordenação/: Datastructs.c  Datastructs.h  ls  main.c
AD1 (algoritmos e estruturas de dados)/pilha/: iterator.cpp  ls  pilha  pilha.cpp  pilha.h
AD1 (algoritmos e estruturas de dados)/pilhas/: main_pilha.cpp
AD1 (algoritmos e estruturas de dados)/recursividade/: aula01.c
AD1/vetor/: float_vector.c
AED 2 (Algoritmos e estruta de dados 2)/: teste.c
IP(introdução a programação)/projetofinal/snake/: CMakeLists.txt
IP(introdução a programação)/projetofinal/snake/include/: geometry.h  libraries.h  object.h
IP(introdução a programação)/projetofinal/snake/source/: devices.c  functions.c  geometry.c  main.c  object.c  settings.c
SB/: acessfunc2.S  acessfunc3.S  acessofunc.S  prova02V1.S  prova02V2.s  prova02V3.S
lista-01/: 06.c  12.c
lista-02/: 11.c
lista-03/: 01.c  03.c  04.c  05.c  07.c  10.c
lista01/: 02.c  04.c  08.c  09.c  10.c  11.c  13.c  ls
lista02/: 02.c  04.c  05.c  06.c  07.c  08.c  09.c  12.c  16.c  17.c  18.c
n_courses/: a.cpp  algumasfuncoes.cpp  cores.cpp  criandojanela.cpp  hello.cpp  imrpimindoarquivo.cpp  janela2.cpp  janela4.cpp  lendoalog.cpp  ls  resumo.txt  saidastext.cpp  teste.c
(+406 files in other folders)
